[package]
name = "my-json"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
decimal = ["rust_decimal"]


[dependencies]
rust_decimal = { version = "*", optional = true }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
async-trait = "*"
